layout issues

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -24,12 +24,13 @@ body{
 	height:4em;
 	background-color:$orange;
 	border-bottom:1px solid $orange-dark;
+	margin-bottom:3%;
 
 	a{
 		color:#fff;
 		text-decoration: none;
 		font-size:40px;
-		line-height:67px;
+		line-height:60px;
 		margin:0% 5% 0% 0%;
 		float:right;
 		font-family:$font;
@@ -90,7 +91,7 @@ form.changeuser{
 	border:1px solid $light-grey;
 	width:33%;
 	height:790px;
-	margin:3% 0% 3% 0%;
+	margin:0% 0% 3% 0%;
 	background:#fafafa;
 	border-radius:3px;
 
@@ -125,7 +126,7 @@ form.changeuser{
 	border:1px solid $light-grey;
 	width:63%;
 	height:330px;
-	margin:3% 0% 0% 0%;
+	margin:0% 0% 3% 0%;
 	background:#fafafa;
 	border-radius:3px;
 
